Make sure to collect FORM attributes if the FORM was found along with misplaced content inside TABLE. b=142965, r=heikki, sr=jst. Added -/W3C/DTD HTML 4.0 Transitional/EN to the quirks list. b=146274, r=heikki, sr=dbaron